--- a/Spring_Boot_Jsp_1/Dockerfile
+++ b/Spring_Boot_Jsp_1/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:8
-ADD target/SpringBoot-Jsp-App.jar SpringBoot-Jsp-App.jar
+MAINTAINER Krishna Yenduri <tech.krishnayenduri@gmail.com>
 EXPOSE 9091
+ADD target/SpringBoot-Jsp-App.jar SpringBoot-Jsp-App.jar
 ENTRYPOINT ["java","-jar","SpringBoot-Jsp-App.jar"]
