--- a/ForLoops/Dockerfile
+++ b/ForLoops/Dockerfile
@@ -1,5 +1,3 @@
 FROM openjdk:8
 MAINTAINER Krishna Yenduri <tech.krishnayenduri@gmail.com>
-EXPOSE 9091
-ADD /SpringBoot-Jsp-App.jar SpringBoot-Jsp-App.jar
-ENTRYPOINT ["java","-jar","SpringBoot-Jsp-App.jar"]
+ENTRYPOINT ["java", "PatternsTest"]
