--- a/Spring_Boot_Jsp_1/src/main/resources/application.properties
+++ b/Spring_Boot_Jsp_1/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# ===============================
+# = SERVER CONFIGURATION
+# ===============================
+
 server.port=9091
+
+# ===============================
+# = DATA SOURCE  Oracle settings
+# ===============================
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=CHENNAI
+spring.datasource.password=chennai
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+# ===============================
+# = JPA/HIBERNATE
+# ===============================
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
