--- a/Spring_Boot_Jsp_1/pom.xml
+++ b/Spring_Boot_Jsp_1/pom.xml
@@ -56,6 +56,10 @@
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-multipart</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
